Revert "Bug 1867385 - Replace Preferences Navbar with reusable Category Navigation component r=hjones,fluent-reviewers,desktop-theme-reviewers,bolsson,flod" for causing Marionette failures  test_default_launcher_visible.py
This reverts commit dd7944feed7688a5a769f244b1abef732ecb2dd9.

UltraBlame original commit: 9711c665ab4269733d04c8ce65bd9f26a1a1ed6a

--- a/toolkit/content/widgets/moz-page-nav/moz-page-nav.css
+++ b/toolkit/content/widgets/moz-page-nav/moz-page-nav.css
@@ -95,10 +95,6 @@ hr {
   border: 0;
   background-color: var(--page-nav-hr-color);
   flex-shrink: 0;
-
-  @media (max-width: 52rem) {
-    width: var(--button-size-icon);
-  }
 }
 
 :host([type="mobile"]) {
